[gd_scene load_steps=18 format=3 uid="uid://cmfudhahwgb1l"]

[ext_resource type="Script" uid="uid://c1uqne0i5tuli" path="res://scripts/game.gd" id="1_ir15t"]
[ext_resource type="Script" uid="uid://sdvip6280y30" path="res://scripts/lighthouse.gd" id="2_ca42v"]
[ext_resource type="Texture2D" uid="uid://c0kcisdb8sd7t" path="res://graphics/lighthouse.png" id="3_rysoc"]
[ext_resource type="PackedScene" uid="uid://dfbs2l8s8tjay" path="res://scenes/music.tscn" id="4_ca42v"]
[ext_resource type="Script" uid="uid://ybhhryggl43w" path="res://scripts/ui_manager.gd" id="4_ssvqc"]
[ext_resource type="Texture2D" uid="uid://3wkdaevhd7qg" path="res://graphics/btn-pause.png" id="5_264po"]
[ext_resource type="Texture2D" uid="uid://bf8qr0ashcyga" path="res://graphics/btn-pause-hover.png" id="6_1kice"]
[ext_resource type="FontFile" uid="uid://fl4ltstkua2f" path="res://fonts/KGSimplytheBest.ttf" id="7_5newe"]
[ext_resource type="FontFile" uid="uid://rbx6ylco52ix" path="res://fonts/KGSimplytheBest.otf" id="8_37s47"]
[ext_resource type="Texture2D" uid="uid://bwf038hs4kump" path="res://graphics/btn-play.png" id="9_bt5mj"]
[ext_resource type="Texture2D" uid="uid://e2jlhx587pt0" path="res://graphics/btn-play-hover.png" id="10_e1j6l"]
[ext_resource type="Texture2D" uid="uid://dwdbnjtasd0fa" path="res://graphics/btn-tutorial.png" id="11_pl11u"]
[ext_resource type="Texture2D" uid="uid://bu0d4uycpggdd" path="res://graphics/btn-tutorial-hover.png" id="12_bhx41"]
[ext_resource type="Texture2D" uid="uid://chp77srg2a5mm" path="res://graphics/btn-resume.png" id="13_qnb83"]
[ext_resource type="Texture2D" uid="uid://crpbuasr8s2x4" path="res://graphics/btn-resume-hover.png" id="14_sww3w"]
[ext_resource type="AudioStream" uid="uid://ckddsts7glocv" path="res://sfx/click-1.mp3" id="15_suyxu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fc0e3"]
radius = 89.0
height = 270.0

[node name="Game" type="Node2D"]
script = ExtResource("1_ir15t")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -976.0
offset_top = -555.0
offset_right = 985.0
offset_bottom = 567.0
color = Color(0.152941, 0.141176, 0.137255, 1)

[node name="Lighthouse" type="Area2D" parent="."]
script = ExtResource("2_ca42v")

[node name="Sprite2D" type="Sprite2D" parent="Lighthouse"]
position = Vector2(43, 58)
texture = ExtResource("3_rysoc")

[node name="LightShape" type="Polygon2D" parent="Lighthouse"]
color = Color(1, 1, 1, 0.498039)

[node name="LightBorder" type="CollisionPolygon2D" parent="Lighthouse"]
polygon = PackedVector2Array(0, 0, 1200, 300, 1200, 0, 1200, -300)

[node name="LH" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LH"]
position = Vector2(5, 109)
shape = SubResource("CapsuleShape2D_fc0e3")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Followers" type="Node2D" parent="."]

[node name="Music_Main" parent="." instance=ExtResource("4_ca42v")]

[node name="SFX_Click" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
position = Vector2(-960, -540)
stream = ExtResource("15_suyxu")
bus = &"SFX"

[node name="UIManager" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_left = -960.0
offset_top = -540.0
offset_right = -960.0
offset_bottom = -540.0
script = ExtResource("4_ssvqc")

[node name="ColorRect" type="ColorRect" parent="UIManager"]
layout_mode = 0
offset_left = -992.0
offset_top = -570.0
offset_right = 1000.0
offset_bottom = 600.0
color = Color(0, 0, 0, 0)

[node name="BtnPause" type="TextureButton" parent="UIManager"]
layout_mode = 0
offset_left = 1750.0
offset_top = 54.0
offset_right = 1860.0
offset_bottom = 164.0
texture_normal = ExtResource("5_264po")
texture_pressed = ExtResource("6_1kice")
texture_hover = ExtResource("6_1kice")

[node name="SavedLabel" type="Label" parent="UIManager"]
layout_mode = 0
offset_left = 90.0
offset_top = 989.0
offset_right = 350.0
offset_bottom = 1042.0
theme_override_colors/font_color = Color(0.921569, 0.894118, 0.831373, 1)
theme_override_fonts/font = ExtResource("7_5newe")
theme_override_font_sizes/font_size = 50
text = "Ship saved: 0"

[node name="Panel" type="Panel" parent="UIManager"]
layout_mode = 0
offset_right = 1982.0
offset_bottom = 1133.0

[node name="Stats" type="Label" parent="UIManager/Panel"]
layout_mode = 0
offset_left = 82.0
offset_top = 649.0
offset_right = 681.0
offset_bottom = 830.0
theme_override_colors/font_color = Color(0.921569, 0.894118, 0.831373, 1)
theme_override_fonts/font = ExtResource("8_37s47")
theme_override_font_sizes/font_size = 84
text = "Congrats
you saved x ships!"

[node name="BtnPlay" type="TextureButton" parent="UIManager/Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 837.0
offset_right = 420.0
offset_bottom = 987.0
texture_normal = ExtResource("9_bt5mj")
texture_pressed = ExtResource("10_e1j6l")
texture_hover = ExtResource("10_e1j6l")

[node name="BtnTutorial" type="TextureButton" parent="UIManager/Panel"]
layout_mode = 0
offset_left = 89.0
offset_top = 893.0
offset_right = 459.0
offset_bottom = 1043.0
texture_normal = ExtResource("11_pl11u")
texture_pressed = ExtResource("12_bhx41")
texture_hover = ExtResource("12_bhx41")

[node name="BtnResume" type="TextureButton" parent="UIManager/Panel"]
layout_mode = 0
offset_left = 52.0
offset_top = 835.0
offset_right = 422.0
offset_bottom = 985.0
texture_normal = ExtResource("13_qnb83")
texture_pressed = ExtResource("14_sww3w")
texture_hover = ExtResource("14_sww3w")

[connection signal="body_entered" from="Lighthouse" to="Lighthouse" method="_on_body_entered"]
[connection signal="body_exited" from="Lighthouse" to="Lighthouse" method="_on_body_exited"]
[connection signal="area_entered" from="LH" to="." method="_on_lh_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_level_timer_timeout"]
[connection signal="pressed" from="UIManager/BtnPause" to="." method="_on_btn_pause_pressed"]
[connection signal="pressed" from="UIManager/Panel/BtnPlay" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="UIManager/Panel/BtnTutorial" to="." method="_on_btn_tutorial_pressed"]
[connection signal="pressed" from="UIManager/Panel/BtnResume" to="." method="_on_btn_resume_pressed"]
